# Gvoice

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cm.txt  hola.cpp  hola.h  launch.vs.json  main.cpp
lib/macos/openFramework/addons/ofxOpenCv/libs/opencv/include/opencv4/opencv2/: cvconfig.h
lib/windows/openFramework/libs/openFrameworks/sound/: ofOpenALSoundPlayer.h
